[tool.poetry]
name = "intertext"
version = "0.0.1"
description = "Discover and visualize text reuse"
readme = "README.md"
repository = "https://github.com/yaledhlab/intertext"
authors = ["Yale DHLab <douglas.duhaime@gmail.com>"]
license = "MIT"
# License and required Python version is automatically added
keywords = ["text-mining", "data-visualization", "text-reuse", "plagiarism"]

[tool.poetry.dependencies]
python = "~3.7"
beautifulsoup4 ="4.5.1"
bounter = "1.1.1"
datasketch= "0.2.6"
networkx = "^2.4" # >=2.4 and <3.0
nltk = "3.4.5"
numpy = "1.20.1"
requests = "2.24.0"
unidecode = "1.2.0"
vectorizedMinHash = { git = "https://github.com/yaledhlab/vectorized-minhash.git", branch = "main" }
cupy = { version = "*", optional = true }
Levenshtein = { version = "*", optional = true }

[tool.poetry.extras]
cupy = ["cupy"]
levenshtein = ["Levenshtein"]

[tool.poetry.scripts]
intertext = "intertext.intertext:parse"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
