[tool.poetry]
name = "intertext"
version = "0.0.1"
description = "Discover and visualize text reuse"
readme = "README.md"
repository = "https://github.com/yaledhlab/intertext"
authors = ["Yale DHLab <douglas.duhaime@gmail.com>"]
license = "MIT"
# License and required Python version is automatically added
keywords = ["text-mining", "data-visualization", "text-reuse", "plagiarism"]

[tool.poetry.dependencies]
python = "^3.10" # >=3.10 and <4.0
beautifulsoup4 ="^4.11.1" # >=4.11.1 and <5.0
bounter = "^1.1.1" # >=1.1.1 and <2.0
networkx = "^2.8.6" # >=2.8.6 and <3.0
numpy = "^1.23.3" # >=1.23.3 and <2.0
unidecode = "^1.3.4" # >=1.3.4 and <2.0
tqdm = "^4.64.1" # >=4.64.1 and <5.0
# Compiling is very slow. The appropriate cupy-cuda* precompiled package is recommended!
# See also: https://docs.cupy.dev/en/stable/install.html#installing-cupy-from-pypi
cupy = { version = "*", optional = true }

[tool.poetry.extras]
cupy = ["cupy"]

[tool.poetry.scripts]
intertext = "intertext.intertext:parse"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
